Add i18n to clusterstatus

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -36,5 +36,9 @@
   "deploying": "Deploying",
   "version": "MetalK8s Version",
   "node_deployment": "Node Deployment",
-  "back_to_node_list": "Back to nodes list"
+  "back_to_node_list": "Back to nodes list",
+  "cluster_status": "Cluster Status",
+  "severity": "Severity",
+  "message": "Message",
+  "active_at": "Active at"
 }
