--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -40,5 +40,5 @@
   "cluster_status": "Cluster Status",
   "severity": "Severity",
   "message": "Message",
-  "active_at": "Active at"
+  "active_at": "Active Since"
 }
