--- a/ui/src/translations/fr.json
+++ b/ui/src/translations/fr.json
@@ -38,7 +38,11 @@
   "node_deployment": "Déploiement du node",
   "back_to_node_list": "Retour à la liste des nodes",
   "cluster_status": "Status de la grappe de serveurs",
+  "cluster_monitoring": "Surveillance de la grappe de serveurs",
   "severity": "Sévérité",
   "message": "Message",
-  "active_at": "Actif à"
+  "active_at": "Actif depuis",
+  "cluster_up_and_running": "Grappe de serveurs opérationnelle",
+  "down": "H.S",
+  "alert_list": "Liste d'alerte"
 }
